#4 add input/output arguments
